fix: use envsubst to substitute environment variables in builder-config.yaml
- Add envsubst step to replace ${OTEL_CONTRIB_VERSION} and ${OTEL_CONFMAP_VERSION}
- Generate builder-config.generated.yaml with substituted values
- Add debug output to show generated config
- OCB doesn't natively support env variable expansion in config files

--- a/.github/workflows/build_cotcc.yaml
+++ b/.github/workflows/build_cotcc.yaml
@@ -46,26 +46,21 @@ jobs:
         with:
           go-version: ${{ env.GOLANG_VERSION }}
 
-      # Download OCB (OpenTelemetry Collector Builder) from official releases
-      - name: Download OCB
+       # Download OCB (OpenTelemetry Collector Builder) from official releases and verify OCB was downloaded successfully
+      - name: Install OpenTelemetry Collector Builder
         run: |
-          # Download OCB binary
           curl --proto '=https' --tlsv1.2 -fL -o ocb \
             "https://github.com/open-telemetry/opentelemetry-collector-releases/releases/download/cmd%2Fbuilder%2Fv${{ env.OCB_VERSION }}/ocb_${{ env.OCB_VERSION }}_linux_amd64"
-          
-          # Make executable and verify it works
           chmod +x ocb
           ./ocb version
 
       # Build collector using configuration from builder-config.yaml
-      - name: Build Custom OT Collector
+      - name: Build OpenTelemetry Collector Contrib
         env:
           OTEL_CONTRIB_VERSION: ${{ env.OTEL_CONTRIB_VERSION }}
           OTEL_CONFMAP_VERSION: ${{ env.OTEL_CONFMAP_VERSION }}
         run: |
-          echo "Building with OTEL_CONTRIB_VERSION=${OTEL_CONTRIB_VERSION}"
-          echo "Building with OTEL_CONFMAP_VERSION=${OTEL_CONFMAP_VERSION}"
-          ./ocb --config building-custom-collector/builder-config.yaml
+          ./ocb --config builder-config.yaml
 
       # Verify that the built binary exists and works correctly
       - name: Verify built binary
