fix: update output_path in builder-config.yaml to building-custom-collector/dist
- Change output_path from ./dist to ./building-custom-collector/dist
- OCB runs from root directory, so path needs to include subdirectory

--- a/building-custom-collector/builder-config.yaml
+++ b/building-custom-collector/builder-config.yaml
@@ -2,7 +2,7 @@ dist:
   module: github.com/open-telemetry/opentelemetry-collector-contrib/cmd/otelcontribcol
   name: otelcol-custom
   description: Custom OpenTelemetry Collector Contrib
-  output_path: ./dist
+  output_path: ./building-custom-collector/dist
   version: ${OTEL_CONTRIB_VERSION}
 
 receivers:
