--- a/building-custom-collector/builder-config.yaml
+++ b/building-custom-collector/builder-config.yaml
@@ -3,26 +3,26 @@ dist:
   name: otelcol-custom
   description: Custom OpenTelemetry Collector Contrib
   output_path: ./building-custom-collector/dist
-  version: ${OTEL_CONTRIB_VERSION}
+  version: 0.138.0
 
 receivers:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/otlpreceiver v${OTEL_CONTRIB_VERSION}
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/otlpreceiver v0.138.0
 
 processors:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/filterprocessor v${OTEL_CONTRIB_VERSION}
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/transformprocessor v${OTEL_CONTRIB_VERSION}
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/filterprocessor v0.138.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/transformprocessor v0.138.0
 
 exporters:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/otlphttpexporter v${OTEL_CONTRIB_VERSION}
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/debugexporter v${OTEL_CONTRIB_VERSION}
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/otlphttpexporter v0.138.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/debugexporter v0.138.0
 connectors:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/connector/routingconnector v${OTEL_CONTRIB_VERSION}
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/connector/routingconnector v0.138.0
 
 extensions:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/healthcheckextension v${OTEL_CONTRIB_VERSION}
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/pprofextension v${OTEL_CONTRIB_VERSION}
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/zpagesextension v${OTEL_CONTRIB_VERSION}
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/healthcheckextension v0.138.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/pprofextension v0.138.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/zpagesextension v0.138.0
 
 providers:
-  - gomod: go.opentelemetry.io/collector/confmap/provider/fileprovider v${OTEL_CONFMAP_VERSION}
-  - gomod: go.opentelemetry.io/collector/confmap/provider/envprovider v${OTEL_CONFMAP_VERSION}
+  - gomod: go.opentelemetry.io/collector/confmap/provider/fileprovider v1.36.0
+  - gomod: go.opentelemetry.io/collector/confmap/provider/envprovider v1.36.0
