--- a/building-custom-collector/builder-config.yaml
+++ b/building-custom-collector/builder-config.yaml
@@ -6,23 +6,23 @@ dist:
   version: 0.138.0
 
 receivers:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/otlpreceiver v0.138.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/otlpreceiver
 
 processors:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/filterprocessor v0.138.0
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/transformprocessor v0.138.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/filterprocessor
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/processor/transformprocessor
 
 exporters:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/otlphttpexporter v0.138.0
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/debugexporter v0.138.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/otlphttpexporter
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/exporter/debugexporter
 connectors:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/connector/routingconnector v0.138.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/connector/routingconnector
 
 extensions:
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/healthcheckextension v0.138.0
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/pprofextension v0.138.0
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/zpagesextension v0.138.0
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/healthcheckextension
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/pprofextension
+  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/extension/zpagesextension
 
 providers:
-  - gomod: go.opentelemetry.io/collector/confmap/provider/fileprovider v1.36.0
-  - gomod: go.opentelemetry.io/collector/confmap/provider/envprovider v1.36.0
+  - gomod: go.opentelemetry.io/collector/confmap/provider/fileprovider
+  - gomod: go.opentelemetry.io/collector/confmap/provider/envprovider
